test/corpus/inoperator.txt
======================
In operator on object
======================

local obj = { a: null };
'a' in obj

---

(document
    (local_bind
      (local)
      (bind
        (id)
        (object
          (member
            (field
              (fieldname (id))
              (null)))))
    (binaryop
      (string
        (string_start)
        (string_content)
        (string_end))
      (binaryop_comparison)
      (id))))

======================
In operator on super
======================

local obj = { a: null };
obj + { b: 'a' in super }

---

(document
  (local_bind
    (local)
    (bind
      (id)
      (object
        (member
          (field
            (fieldname (id))
            (null)))))
    (binaryop
      (id)
      (binaryop_additive)
      (object
        (member
          (field
            (fieldname (id))
              (in_super
                (string
                  (string_start)
                  (string_content)
                  (string_end))
                (super))))))))
